[package]
name = "trustee-cli"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[[bin]]
name = "trustee"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
attestation-service = { path = "../../attestation-service" }
clap = { workspace = true, features = ["string"] }
dirs = "6.0.0"
env_logger.workspace = true
flate2 = "1.0"
http-cache-reqwest = { version = "0.16.0", default-features = false, features = ["manager-cacache"] }
kbs = { path = "../../kbs" }
log.workspace = true
nix = { version = "0.30.1", features = ["user"] }
openssl.workspace = true
reference-value-provider-service = { path = "../../rvps" }
reqwest.workspace = true
reqwest-middleware = "0.4.2"
tar = "0.4"
tokio.workspace = true
